--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ project(BaseBuses)
 
 include_directories(include/DataBase)
 include_directories(include/MachineForCreateBase)
-include_directories(include/PasreRequests)
+include_directories(include/ParseRequests)
 include_directories(include/DataBase/ProcessingBase)
 include_directories(include/Tests)
+
+find_package(nlohmann_json 3.2.0 REQUIRED)
 
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
@@ -18,4 +20,3 @@ set_target_properties(
         CXX_STANDARD 20
         CXX_STANDARD_REQUIRED ON
 )
-
